[feat] Classificadores One vs Rest e Chain

--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -15,7 +15,12 @@
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.multiclass import OneVsRestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import hamming_loss\n",
+    "from skmultilearn.problem_transform import ClassifierChain\n",
+    "import numpy as np"
    ]
   },
   {
@@ -515,7 +520,7 @@
    "source": [
     "### Vetorização dos dados\n",
     "\n",
-    "Por estarmos trabalhando com variável de texto, vetorizamos a coluna."
+    "Por estarmos trabalhando com variável de texto vetorizamos a coluna de perguntas."
    ]
   },
   {
@@ -534,6 +539,121 @@
     "# Vetorizando as perguntas de treino e teste.\n",
     "perguntas_treino_vetorizadas = vetorizador.transform(perguntas_treino)\n",
     "perguntas_teste_vetorizadas = vetorizador.transform(perguntas_teste)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classificação Multilabel: One vs Rest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia OneVsRest: 42.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convertendo as tags de treino e teste para array.\n",
+    "tags_treino_array = np.asarray(list(tags_treino))\n",
+    "tags_teste_array = np.asarray(list(tags_teste))\n",
+    "\n",
+    "# Instanciando Regressão Logística.\n",
+    "regressao_logistica = LogisticRegression(solver = 'lbfgs')\n",
+    "\n",
+    "# Instanciando o classificador.\n",
+    "classificador = OneVsRestClassifier(regressao_logistica)\n",
+    "\n",
+    "# Treinando o classificador.\n",
+    "classificador.fit(perguntas_treino_vetorizadas, tags_treino_array)\n",
+    "\n",
+    "# Fazendo previsões.\n",
+    "tags_previstas = classificador.predict(perguntas_teste_vetorizadas)\n",
+    "\n",
+    "# Calculando a acurácia.\n",
+    "resultado_onevsrest = classificador.score(perguntas_teste_vetorizadas, tags_teste_array)\n",
+    "\n",
+    "print(f'Acurácia OneVsRest: {round(resultado_onevsrest, 2) * 100}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métrica Hamming Loss\n",
+    "\n",
+    "Ao calcular o Hamming Loss das previsões realizadas com modelo de classificação OneVsRest, podemos notar que o valor é bem próximo de 0.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hamming Loss: 0.19\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculando o Hamming Loss.\n",
+    "resultado_hamming_loss = hamming_loss(tags_teste_array, tags_previstas)\n",
+    "\n",
+    "print(f'Hamming Loss: {round(resultado_hamming_loss, 2)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classificação em cadeia\n",
+    "\n",
+    "Com a classificação em cadeia (chain), podemos notar houve uma melhoria na acurácia, porém o Hamming Loss aumentou."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia ClassifierChain: 50.0%\n",
+      "Hamming Loss ClassifierChain: 0.21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instanciando o classificador em cadeia.\n",
+    "classificador_cadeia = ClassifierChain(regressao_logistica)\n",
+    "\n",
+    "# Treinando o classificador em cadeia.\n",
+    "classificador_cadeia.fit(perguntas_treino_vetorizadas, tags_treino_array)\n",
+    "\n",
+    "# Fazendo previsões.\n",
+    "tags_previstas_cadeia = classificador_cadeia.predict(perguntas_teste_vetorizadas)\n",
+    "\n",
+    "# Calculando a acurácia.\n",
+    "resultado_cadeia = classificador_cadeia.score(perguntas_teste_vetorizadas, tags_teste_array)\n",
+    "\n",
+    "# Calculando o Hamming Loss.\n",
+    "resultado_hamming_loss_cadeia = hamming_loss(tags_teste_array, tags_previstas_cadeia)\n",
+    "\n",
+    "print(f'Acurácia ClassifierChain: {round(resultado_cadeia, 2) * 100}%')\n",
+    "print(f'Hamming Loss ClassifierChain: {round(resultado_hamming_loss_cadeia, 2)}')"
    ]
   }
  ],
