[feat] Classificação binária com Skmultilearn

--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -20,6 +20,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import hamming_loss\n",
     "from skmultilearn.problem_transform import ClassifierChain\n",
+    "from skmultilearn.problem_transform import BinaryRelevance\n",
     "import numpy as np"
    ]
   },
@@ -654,6 +655,47 @@
     "\n",
     "print(f'Acurácia ClassifierChain: {round(resultado_cadeia, 2) * 100}%')\n",
     "print(f'Hamming Loss ClassifierChain: {round(resultado_hamming_loss_cadeia, 2)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classificação binária utilizando Skmultilearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia BinaryRelevance: 42.0%\n",
+      "Hamming Loss BinaryRelevance: 0.19\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instanciando o classificador.\n",
+    "classificador_binario = BinaryRelevance(regressao_logistica)\n",
+    "\n",
+    "# Treinando o classificador.\n",
+    "classificador_binario.fit(perguntas_treino_vetorizadas, tags_treino_array)\n",
+    "\n",
+    "# Fazendo previsões.\n",
+    "tags_previstas_binario = classificador_binario.predict(perguntas_teste_vetorizadas)\n",
+    "\n",
+    "# Calculando a acurácia.\n",
+    "resultado_binario = classificador_binario.score(perguntas_teste_vetorizadas, tags_teste_array)\n",
+    "\n",
+    "# Calculando o Hamming Loss.\n",
+    "resultado_hamming_loss_binario = hamming_loss(tags_teste_array, tags_previstas_binario)\n",
+    "\n",
+    "print(f'Acurácia BinaryRelevance: {round(resultado_binario, 2) * 100}%')\n",
+    "print(f'Hamming Loss BinaryRelevance: {round(resultado_hamming_loss_binario, 2)}')"
    ]
   }
  ],
