[feat] Classificação MLkNN

--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -21,6 +21,7 @@
     "from sklearn.metrics import hamming_loss\n",
     "from skmultilearn.problem_transform import ClassifierChain\n",
     "from skmultilearn.problem_transform import BinaryRelevance\n",
+    "from skmultilearn.adapt import MLkNN\n",
     "import numpy as np"
    ]
   },
@@ -661,7 +662,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Classificação binária utilizando Skmultilearn"
+    "### Classificação binária utilizando Skmultilearn\n",
+    "\n",
+    "Abaixo, foi utilizado Binary Relevance do Skmultilearn que retorna os mesmos resultados do classificador One vs Rest."
    ]
   },
   {
@@ -696,6 +699,175 @@
     "\n",
     "print(f'Acurácia BinaryRelevance: {round(resultado_binario, 2) * 100}%')\n",
     "print(f'Hamming Loss BinaryRelevance: {round(resultado_hamming_loss_binario, 2)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classificação MLkNN\n",
+    "\n",
+    "Esse algoritmo é especialmente útil em situações onde cada instância pode pertencer a múltiplas classes, como classificação de texto, onde um documento pode ser categorizado em múltiplos tópicos. Sendo assim, treinamos o classificador e o mesmo retornou as métricas baixas em comparação aos demais classificadores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia MLkNN: 33.0%\n",
+      "Hamming Loss MLkNN: 0.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instanciando o classificador.\n",
+    "classificador_mlknn = MLkNN()\n",
+    "\n",
+    "# Treinando o classificador.\n",
+    "classificador_mlknn.fit(perguntas_treino_vetorizadas, tags_treino_array)\n",
+    "\n",
+    "# Fazendo previsões.\n",
+    "tags_previstas_mlknn = classificador_mlknn.predict(perguntas_teste_vetorizadas)\n",
+    "\n",
+    "# Calculando a acurácia.\n",
+    "resultado_mlknn = classificador_mlknn.score(perguntas_teste_vetorizadas, tags_teste_array)\n",
+    "\n",
+    "# Calculando o Hamming Loss.\n",
+    "resultado_hamming_loss_mlknn = hamming_loss(tags_teste_array, tags_previstas_mlknn)\n",
+    "\n",
+    "print(f'Acurácia MLkNN: {round(resultado_mlknn, 2) * 100}%')\n",
+    "print(f'Hamming Loss MLkNN: {round(resultado_hamming_loss_mlknn, 2)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Criando dataframe com os resultados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Perguntas</th>\n",
+       "      <th>Tags_real</th>\n",
+       "      <th>Tags_previstas_OneVsRest</th>\n",
+       "      <th>Tags_previstas_ClassifierChain</th>\n",
+       "      <th>Tags_previstas_MLkNN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>estou com conflito entre o  CODE   e os  CODE ...</td>\n",
+       "      <td>(0, 1, 0, 0)</td>\n",
+       "      <td>[0, 1, 0, 0]</td>\n",
+       "      <td>[0.0, 1.0, 0.0, 0.0]</td>\n",
+       "      <td>[0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Estou fazendo um site que eu sou obrigado a us...</td>\n",
+       "      <td>(0, 0, 1, 0)</td>\n",
+       "      <td>[0, 0, 1, 0]</td>\n",
+       "      <td>[0.0, 0.0, 1.0, 0.0]</td>\n",
+       "      <td>[0, 1, 1, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Recentemente fiz um refactor do meu código par...</td>\n",
+       "      <td>(1, 0, 0, 0)</td>\n",
+       "      <td>[1, 0, 0, 0]</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 0.0]</td>\n",
+       "      <td>[1, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Eu tenho esse código em CODE  que passo valore...</td>\n",
+       "      <td>(0, 1, 1, 0)</td>\n",
+       "      <td>[0, 1, 0, 0]</td>\n",
+       "      <td>[0.0, 1.0, 0.0, 0.0]</td>\n",
+       "      <td>[0, 1, 1, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Olá, em minha função tem o evento CODE  que de...</td>\n",
+       "      <td>(0, 1, 1, 0)</td>\n",
+       "      <td>[0, 1, 0, 0]</td>\n",
+       "      <td>[0.0, 1.0, 0.0, 0.0]</td>\n",
+       "      <td>[0, 1, 1, 0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           Perguntas     Tags_real  \\\n",
+       "0  estou com conflito entre o  CODE   e os  CODE ...  (0, 1, 0, 0)   \n",
+       "1  Estou fazendo um site que eu sou obrigado a us...  (0, 0, 1, 0)   \n",
+       "2  Recentemente fiz um refactor do meu código par...  (1, 0, 0, 0)   \n",
+       "3  Eu tenho esse código em CODE  que passo valore...  (0, 1, 1, 0)   \n",
+       "4  Olá, em minha função tem o evento CODE  que de...  (0, 1, 1, 0)   \n",
+       "\n",
+       "  Tags_previstas_OneVsRest Tags_previstas_ClassifierChain Tags_previstas_MLkNN  \n",
+       "0             [0, 1, 0, 0]           [0.0, 1.0, 0.0, 0.0]         [0, 0, 0, 0]  \n",
+       "1             [0, 0, 1, 0]           [0.0, 0.0, 1.0, 0.0]         [0, 1, 1, 0]  \n",
+       "2             [1, 0, 0, 0]           [1.0, 0.0, 0.0, 0.0]         [1, 0, 0, 0]  \n",
+       "3             [0, 1, 0, 0]           [0.0, 1.0, 0.0, 0.0]         [0, 1, 1, 0]  \n",
+       "4             [0, 1, 0, 0]           [0.0, 1.0, 0.0, 0.0]         [0, 1, 1, 0]  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultados = pd.DataFrame()\n",
+    "resultados['Perguntas'] = perguntas_teste.values\n",
+    "resultados['Tags_real'] = list(tags_teste)\n",
+    "resultados['Tags_previstas_OneVsRest'] = list(tags_previstas)\n",
+    "resultados['Tags_previstas_ClassifierChain'] = list(tags_previstas_cadeia.toarray())\n",
+    "resultados['Tags_previstas_MLkNN'] = list(tags_previstas_mlknn.toarray())\n",
+    "\n",
+    "resultados.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusão\n",
+    "\n",
+    "Ao analisar as métricas e Hamming Loss de cada modelo, apesar das melhorias que podem ser implementadas, podemos considerar que o classificador em cadeia pode ser uma solução para classificar as perguntas por ter as métricas medianas em comparação aos demais modelos até o momento."
    ]
   }
  ],
