[docs] Documentação do projeto

--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Modelo de Classificação Multilabel para tagueamento de perguntas\n",
+    "\n",
+    "## Introdução\n",
+    "Este projeto tem como objetivo criar um modelo para categorizar as perguntas do Stack Overflow em quatro tags diferentes.\n",
+    "\n",
+    "## Objetivo\n",
+    "Este projeto tem como objetivo aplicar Machine Learning para entender a aplicação da relevância binária, classificação em cadeia e MLkNN."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Bibliotecas"
    ]
   },
